# console-image-editor

./: App.cpp  App.h  CMakeLists.txt  CustomNode.cpp  CustomNode.h  CustomQueue.cpp  CustomQueue.h  CustomVector.cpp  CustomVector.h  Image.cpp  Image.h  README.md  Session.cpp  Session.h  Transformation.cpp  Transformation.h  TransformationType.h  main.cpp
docs/: documentation.docx
examples/: color.ppm  gray.pgm
include/: ActionHandler.h  ActionParser.h  ActionReceiver.h  Application.h
src/: CMakeLists.txt
src/core/: Action.h  ActionHandler.cpp  ActionParser.cpp  ActionReceiver.cpp  Application.cpp  CMakeLists.txt  ConsoleActionParser.cpp  ConsoleActionReceiver.h  Image.h  Session.cpp  Session.h  Transformation.h
src/core/action/: Action.cpp  Action.h  ActionType.h  Add.cpp  Add.h  Close.cpp  Close.h  Exit.cpp  Exit.h  ListSession.cpp  ListSession.h  Load.cpp  Load.h  Paste.cpp  Paste.h  Redo.cpp  Redo.h  Save.cpp  Save.h  Switch.cpp  Switch.h  Transformer.cpp  Transformer.h  Undo.cpp  Undo.h  UnknownAction.cpp  UnknownAction.h
src/core/action/transformation/: FlipLeft.cpp  FlipLeft.h  FlipTop.cpp  FlipTop.h  Grayscale.cpp  Grayscale.h  Monochrome.cpp  Monochrome.h  Negative.cpp  Negative.h  RotateLeft.cpp  RotateLeft.h  RotateRight.cpp  RotateRight.h
src/core/image/: Image.cpp  Image.h
src/core/receive/: ActionParser.cpp  ActionReceiver.cpp  ConsoleActionParser.cpp  ConsoleActionParser.h  ConsoleActionReceiver.cpp
src/queue/: CMakeLists.txt  CustomNode.h  CustomQueue.h
src/util/: CMakeLists.txt  CustomExceptions.h  Error.cpp  Error.h
(+10 files in other folders)
